--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,9 +4,9 @@
   "description": "Oreliya API Server",
   "private": true,
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts --fix",
     "type-check": "tsc --noEmit",
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "prisma": "^6.11.1",
+    "winston": "^3.17.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
