feat: add complete jwt authentication system with rbac and tests

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -1,13 +1,13 @@
 # Server Configuration
-PORT=3000
+PORT=3001
 NODE_ENV=development
 
 # Database Configuration
-DATABASE_URL=postgresql://oreliya_user:oreliya_password@localhost:5432/oreliya_db
+DATABASE_URL=postgresql://postgres:password@localhost:5433/oreliya_db
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=7d
+JWT_ACCESS_SECRET=your-access-secret-key-change-in-production
+JWT_REFRESH_SECRET=your-refresh-secret-key-change-in-production
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
