--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -13,4 +13,11 @@ JWT_REFRESH_SECRET=your-refresh-secret-key-change-in-production
 CORS_ORIGIN=http://localhost:5173
 
 # Logging
-LOG_LEVEL=info 
+LOG_LEVEL=info
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
+
+# Frontend URL for Stripe redirects
+FRONTEND_URL=http://localhost:5173 
