--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -34,6 +35,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "prisma": "^6.11.1",
+    "stripe": "^18.3.0",
     "winston": "^3.17.0",
     "zod": "^3.22.4"
   },
