--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,20 +2,19 @@
   "name": "@oreliya/api",
   "version": "1.0.0",
   "description": "Oreliya API Server",
-  "private": true,
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts --fix",
-    "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist node_modules",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc --noEmit && tsc",
+    "build:skip-check": "tsc --noEmitOnError false",
+    "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "test:api": "tsx src/scripts/test-api.ts",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -31,28 +30,28 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.3",
+    "pg": "^8.16.3",
     "prisma": "^6.11.1",
     "stripe": "^18.3.0",
     "winston": "^3.17.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.9",
-    "@types/pg": "^8.10.9",
+    "@types/morgan": "^1.9.10",
+    "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.4",
     "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
-    "tsx": "^4.6.0"
+    "tsx": "^4.20.3"
   }
 }
