--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,8 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!images|assets|favicon.ico|logo.*\\.svg|.*\\.(png|jpg|jpeg|gif|svg|ico|webp|mp4|webm)).*)",
       "destination": "/index.html"
     }
   ]
 }
- 
