--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,6 @@
 {
+  "buildCommand": "cd apps/web && pnpm build",
   "outputDirectory": "apps/web/dist",
-  "framework": "vite",
-  "public": true,
-  "headers": [
-    {
-      "source": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|webp|mp4|webm))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/((?!.*\\.).*)$",
-      "destination": "/index.html"
-    }
-  ]
+  "installCommand": "pnpm install",
+  "framework": "vite"
 }
