--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "cd apps/web && pnpm build",
-  "outputDirectory": "apps/web/dist",
+  "buildCommand": "cd apps/web-next && pnpm build",
   "installCommand": "pnpm install",
-  "framework": "vite"
+  "framework": "nextjs"
 }
