fix: include public folder assets in vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "rootDirectory": "apps/web-next",
   "buildCommand": "pnpm build",
   "installCommand": "pnpm install",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "includeFiles": ["apps/web-next/public/**"]
 }
