fix: add next.js to root package.json for vercel detection

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "rootDirectory": "apps/web-next",
   "buildCommand": "pnpm run vercel-build",
   "installCommand": "pnpm install",
   "framework": "nextjs"
