--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "next": "15.5.3",
     "prettier": "^3.1.0",
     "ts-jest": "^29.4.0",
     "tsx": "^4.6.0",
