--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
+  "rootDirectory": "apps/web-next",
+  "buildCommand": "pnpm install && pnpm run build",
+  "installCommand": "pnpm install",
   "framework": "nextjs"
 }
