fix: update vercel.json to use buildcommand for monorepo

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "rootDirectory": "apps/web-next",
-  "buildCommand": "pnpm install && pnpm run build",
+  "buildCommand": "cd apps/web-next && pnpm install && pnpm run build",
   "installCommand": "pnpm install",
   "framework": "nextjs"
 }
