--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
-    "prepare": "is-ci || husky install"
+    "prepare": "[ -z \"\" ] && husky install || echo 'Skipping husky install in CI'"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
