--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "framework": "nextjs",
-  "rootDirectory": "apps/web-next"
+  "buildCommand": "cd apps/web-next && pnpm install && pnpm run build",
+  "installCommand": "pnpm install",
+  "framework": "nextjs"
 }
