--- a/apps/web-next/package.json
+++ b/apps/web-next/package.json
@@ -22,6 +22,8 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
