--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -31,6 +31,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "api/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
