--- a/apps/web-next/package.json
+++ b/apps/web-next/package.json
@@ -25,19 +25,30 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "supabase:test": "tsx scripts/test-supabase-migration.ts",
+    "supabase:migrate-images": "tsx scripts/migrate-images-to-supabase.ts",
+    "supabase:setup": "tsx scripts/setup-supabase.ts",
+    "create-users": "tsx scripts/create-users.ts",
+    "test:signed-urls": "curl -X POST http://localhost:3000/api/images/signed-url -H 'Content-Type: application/json' -d '{\"filePath\": \"products/1759378148947-10.png\", \"expiresIn\": 3600}' | jq ."
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@supabase/storage-js": "^2.12.2",
+    "@supabase/supabase-js": "^2.58.0",
+    "@types/form-data": "^2.5.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node-fetch": "^2.6.13",
     "@types/stripe": "^8.0.417",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.6.1",
+    "form-data": "^4.0.4",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.0.3",
@@ -62,6 +73,7 @@
     "jsdom": "^23.0.0",
     "prisma": "^6.11.1",
     "tailwindcss": "^4",
+    "tsx": "^4.6.0",
     "typescript": "^5",
     "vitest": "^1.0.0"
   }
