--- a/apps/web-next/vercel.json
+++ b/apps/web-next/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install",
+  "buildCommand": "npm run vercel-build",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs"
 }
