--- a/apps/web-next/package.json
+++ b/apps/web-next/package.json
@@ -3,50 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "prisma generate && next build --turbopack",
-    "build:production": "prisma generate && NODE_ENV=production next build",
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "build:production": "NODE_ENV=production prisma generate && NODE_ENV=production next build",
     "start": "next start",
     "start:production": "NODE_ENV=production next start",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "analyze": "ANALYZE=true next build",
-    "preview": "next build && next start",
-    "clean": "rm -rf .next out",
-    "postbuild": "next-sitemap",
-    "postinstall": "prisma generate",
+    "type-check:strict": "tsc --noEmit --strict",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
-    "supabase:test": "tsx scripts/test-supabase-migration.ts",
-    "supabase:migrate-images": "tsx scripts/migrate-images-to-supabase.ts",
-    "supabase:setup": "tsx scripts/setup-supabase.ts",
-    "create-users": "tsx scripts/create-users.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:seed": "tsx prisma/seed.ts",
     "vercel-build": "prisma generate && next build",
-    "test:signed-urls": "curl -X POST http://localhost:3000/api/images/signed-url -H 'Content-Type: application/json' -d '{\"filePath\": \"products/1759378148947-10.png\", \"expiresIn\": 3600}' | jq ."
+    "precommit": "pnpm run lint && pnpm run type-check",
+    "prebuild": "pnpm run lint && pnpm run type-check",
+    "analyze": "ANALYZE=true next build",
+    "clean": "rm -rf .next out node_modules/.cache",
+    "health": "curl -f http://localhost:3000/api/health || exit 1",
+    "postinstall": "pnpm run db:generate"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
-    "typescript": "^5",
-    "prisma": "^6.11.1",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "@supabase/storage-js": "^2.12.2",
     "@supabase/supabase-js": "^2.58.0",
     "@types/form-data": "^2.5.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node-fetch": "^2.6.13",
     "@types/stripe": "^8.0.417",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.6.1",
@@ -55,7 +43,6 @@
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
-    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.0.3",
@@ -66,16 +53,19 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.40.0",
+    "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.3",
     "@types/node": "^20",
-    "@vitest/ui": "^1.0.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "jsdom": "^23.0.0",
-    "tsx": "^4.6.0",
-    "vitest": "^1.0.0"
+    "prisma": "^6.11.1",
+    "typescript": "^5"
   }
 }
