fix: resolve Vercel deployment and database issues

--- a/apps/web-next/package.json
+++ b/apps/web-next/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "web-next",
-  "version": "0.1.0",
+  "name": "oreliya",
+  "version": "1.0.0",
+  "description": "Oreliya - Full Stack Monorepo",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "build:production": "NODE_ENV=production prisma generate && NODE_ENV=production next build",
-    "start": "next start",
-    "start:production": "NODE_ENV=production next start",
-    "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "type-check": "tsc --noEmit",
-    "type-check:strict": "tsc --noEmit --strict",
+    "vercel-build": "pnpm install --frozen-lockfile && pnpm run build",
+    "test": "pnpm -r run test",
+    "lint": "pnpm -r run lint",
+    "lint:fix": "pnpm -r run lint:fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "pnpm -r run type-check",
+    "clean": "pnpm -r run clean",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "prepare": "husky install || echo 'Skipping husky install in CI'",
+    "postinstall": "pnpm run db:generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -19,13 +27,11 @@
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset --force",
     "db:seed": "tsx prisma/seed.ts",
-    "vercel-build": "prisma generate && next build",
-    "precommit": "pnpm run lint && pnpm run type-check",
-    "prebuild": "pnpm run lint && pnpm run type-check",
+    "start": "pnpm run next:start",
+    "start:production": "NODE_ENV=production pnpm run next:start",
+    "next:start": "next start",
     "analyze": "ANALYZE=true next build",
-    "clean": "rm -rf .next out node_modules/.cache",
-    "health": "curl -f http://localhost:3000/api/health || exit 1",
-    "postinstall": "pnpm run db:generate"
+    "health": "curl -f http://localhost:3000/api/health || exit 1"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
@@ -51,6 +57,8 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.40.0",
     "@tailwindcss/postcss": "^4",
@@ -62,10 +70,33 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-next": "15.5.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
     "jsdom": "^23.0.0",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.1.0",
     "prisma": "^6.11.1",
-    "typescript": "^5"
-  }
+    "tailwindcss": "^3.4.18",
+    "ts-jest": "^29.4.0",
+    "tsx": "^4.6.0",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "packageManager": "pnpm@10.18.0"
 }
